# labwork2-qqq-x-qqq

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cicd.yml
lib/: number.cpp  number.h
tests/: CMakeLists.txt  arithmetic_tests.cpp  comparison_tests.cpp  compatibility_tests.cpp  conversion_tests.cpp  edge_cases_tests.cpp  output_tests.cpp
